--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
   box-sizing: content-box;
-  width: 1020px;
+  max-width: 1020px;
   height: auto;
   margin: 0 auto;
   font-size: 10px;
@@ -400,9 +400,10 @@ body {
 /* portfolio */
 
 .portfolio {
-  height: 869px;
-  background-color: #2d303a;
-  scroll-margin-top: 90px;
+    height: 869px;
+    background-color: #2d303a;
+    border-bottom: 6px solid #323746;
+    scroll-margin-top: 90px;
 }
 
 .menu-item, .portfolio-name {
@@ -415,7 +416,6 @@ body {
 
 .gallery {
   height: 684px;
-  border-bottom: 6px solid #323746;
   background-color: #2d303a;
 }
 
@@ -508,21 +508,15 @@ body {
 }
 
 .gallery-image {
-  /*width: 220px;
-  height: 187px;*/
-  margin: 10px;
+  width: 230px;
+  height: 197px;
+  margin: 5px;
+  padding: 5px;
   overflow: hidden;
 }
 
-
-    .gallery-image::before {
-        content: '';
-        float: left;
-        padding-top: 100%;
-    }
-
 .gallery-image img {
-  /*position: relative;*/
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -881,7 +875,7 @@ body {
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~ Tab size ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-@media (max-width:1019px) {
+@media screen and (max-width:1019px) {
     body {
         width: 768px;
     }
@@ -906,6 +900,10 @@ body {
     .slider-wrapper {
         width: 768px;
         height: inherit;
+    }
+
+    #slide1 {
+        border-bottom: 5px solid #ea676b;
     }
 
     #slide2 {
@@ -953,6 +951,7 @@ body {
 
     .portfolio {
         height: 1094px;
+        border-bottom: 5px solid #323746;
     }
 
     .portfolio-header {
@@ -971,14 +970,14 @@ body {
     }
 
     .layout-4-columns {
-        width: 688px;
-        height: 782px;
+        width: 708px;
+        height: 812px;
     }
 
     .gallery-image {
-        width: 206px;
-        height: 173px;
-        margin: 10px;
+        width: 226px;
+        height: 193px;
+        margin: 5px;
     }
 
     .about-us {
@@ -1023,6 +1022,7 @@ body {
     .quote {
         width: 768px;
         height: 631px;
+        border-bottom: 5px solid #ea676b;
     }
 
     .quote-container {
@@ -1073,15 +1073,18 @@ body {
 
 /*~~~~~~~~~~~~~~~~~~ Mobile size ~~~~~~~~~~~~~~~~~~~~~~*/
 
-@media (max-width:767px) {
-  body {
-    width: 375px;
-  }
-  .header {
-    width: 375px;
-    height: 71px;
-    border: none;
-  }
+@media screen and (max-device-width:767px), (max-width:767px) {
+
+    body {
+        width: 375px;
+    }
+
+    .header {
+        width: 375px;
+        height: 71px;
+        border: none;
+    }
+
     .header-logo {
         position: relative;
         z-index: 10;
@@ -1089,9 +1092,11 @@ body {
         align-self: center;
         transition: transform 0.5s ease-in;
     }
-  .header-container {
-    justify-content: center;
-  }
+
+    .header-container {
+        justify-content: center;
+    }
+
     .navigation {
         position: absolute;
         top: 0;
@@ -1105,247 +1110,316 @@ body {
         transition: transform 0.5s;
         box-shadow: 97px 0px rgba(0, 0, 0, 0.4), 5px 0 10px rgba(0, 0, 0, 0.4)
     }
-  .header-navigation {
-    grid-template-columns: none;
-    margin: auto 0 auto 71px;
-  }
+
+    .header-navigation {
+        grid-template-columns: none;
+        margin: auto 0 auto 71px;
+    }
+
     .navigation-menu {
         width: 205px;
         height: 57px;
     }
-  .nav-main {
-    position: absolute;
-    font-size: 2.4em;
-    line-height: 29px;
-    letter-spacing: -0.035em;
-  }
-  .header-navigation li::before {
-    display: none;
-  }
-  #burger-menu {
-    position: absolute;
-    left: 20px;
-    z-index: 10;
-    display: inline-block;
-    width: 25px;
-    height: 20px;
-    transition: transform 0.5s;
-  }
-  #burger-menu:hover {
-    cursor: pointer;
-  }
-  .slider {
-    padding-top: 71px;
-    height: 289px;
-  }
-  .arrow {
-    transform: scale(0.875);
-  }
-  .arrow-left {
-    margin-left: 0;
-  }
-  .arrow-right {
-    right: 0;
-  }
-  .slider-list {
-    height: 218px;
-  }
-  .slider-wrapper {
-    width: 100%;
-    height: 218px;
-    align-content: center;
-  }
-  #phone-vertical-slide1 {
-    top: 0;
-    right: 125px;
-    transform: scale(0.365);
-  }
-  #phone-horizontal-slide1 {
-    top: 5px;
-    right: 416px;
-    transform: scale(0.365) rotate(90deg);
-  }
-  #slide2 {
-    grid-template-columns: 30% 40% 30%;
-  }
-  .small:not(.screen) {
-    transform: scale(0.237);
-  }
-  #phone-central {
-    top: 0;
-    left: -40px;
-    transform: scale(0.39);
-  }
-  #phone-small-left {
-    top: 0;
-    left: 39px;
-  }
-  #phone-small-right {
-    top: 0;
-    left: -33px;
-  }
-  .services {
-    height: auto;
-  }
-  .service-information {
-    height: auto;
-    padding-top: 0;
-    padding-left: 32px;
-  }
-  #service-header {
-    width: 314px;
-    height: 36px;
-  }
-  #service-content {
-    width: 314px;
-    height: 214px;
-  }
-  .layout-3-column {
-    grid-template-columns: none;
-  }
-  .portfolio-header {
-    width: 315px;
-    height: 197px;
-    padding-top: 42px;
-  }
-  .portfolio-name {
-    top: 0;
-    height: 40px;
-  }
-  .portfolio-header-text {
-    top: 0;
-    margin: 14px 0 0 0;
-    width: 315px;
-    height: 96px;
-  }
-  .layout-4-columns {
-    margin: 0;
-    width: 375px;
-    height: 844px;
-  }
-  .gallery-image {
-    width: 151px;
-    height: 128px;
-    margin: 5px;
-    padding: 5px;
-  }
-  .about-us {
-    height: auto;
-    border-bottom: 9px solid #f2f2f2;
-  }
-  .about-us-content {
-    top: 0;
-    margin: 0 30px 0 30px;
-    height: 321px;
-  }
-  .about-us-content h2 {
-    padding-top: 33px;
-    height: 73px;
-  }
-  .about-us-content p {
-    width: 315px;
-    height: 220px;
-    margin-top: 14px;
-    padding-top: 0;
-  }
-  .layout-3-columns {
-    top: 0;
-    width: 314px;
-    height: auto;
-    margin-left: 30px;
-    flex-wrap: wrap;
-  }
-  .about-us-info {
-    width: 314px;
-  }
-  .portrait {
-    width: 314px;
-    height: 314px;
-  }
-  .portrait img {
-    width: 100%;
-    height: 100%;
-  }
-  .about-us-name {
-    height: 15px;
-    margin-top: 18px;
-    padding: 0;
-    line-height: 18px;
-  }
-  .about-us-text {
-    width: 314px;
-    height: 47px;
-    padding: 0;
-    margin-top: 5px;
-  }
-  .about-us-contact {
-    margin: 9px 0 34px 0;
-    padding: 0;
-  }
-  .quote {
-    width: 375px;
-    height: auto;
-    border: none;
-  }
-  .quote-container {
-    width: 314px;
-    height: 331px;
-    margin: 0 0 0 30px;
-    padding: 44px 0 0 0;
-  }
-  .quote-container h1 {
-    width: 314px;
-  }
-  .quote-container p {
-    width: 314px;
-    height: 214px;
-  }
-  .quote-main-container {
-    grid-template-columns: none;
-    margin-top: 0;
-  }
-  .form {
-    width: 327px;
-    margin-left: 24px;
-    padding: 0;
-  }
-  .input-form {
-    width: 315px;
-  }
-  #describe {
-    width: 315px;
-  }
-  .submit-button {
-    width: 315px;
-    height: 50px;
-  }
-  .quote-contact-info {
-    width: 315px;
-    height: auto;
-    margin: 24px 0 0 30px;
-    padding: 0;
-  }
-  .contact-info-head {
-    width: 100%;
-    height: 15px;
-    line-height: 18px;
-  }
-  .contact-info-text {
-    width: 100%;
-    height: 94px;
-  }
-  .quote-contact {
-    margin-top: 5px;
-    margin-bottom: 42px;
-  }
+
+    .nav-main {
+        position: absolute;
+        font-size: 2.4em;
+        line-height: 29px;
+        letter-spacing: -0.035em;
+    }
+
+    .header-navigation li::before {
+        display: none;
+    }
+
+    #burger-menu {
+        position: absolute;
+        left: 20px;
+        z-index: 10;
+        display: inline-block;
+        width: 25px;
+        height: 20px;
+        transition: transform 0.5s;
+    }
+
+        #burger-menu:hover {
+            cursor: pointer;
+        }
+
+    .slider {
+        padding-top: 71px;
+        height: 289px;
+    }
+
+    .arrow {
+        transform: scale(0.875);
+    }
+
+    .arrow-left {
+        margin-left: 0;
+    }
+
+    .arrow-right {
+        right: 0;
+    }
+
+    .slider-list {
+        height: 218px;
+    }
+
+    .slider-wrapper {
+        width: 100%;
+        height: 218px;
+        align-content: center;
+    }
+
+    #phone-vertical-slide1 {
+        top: 0;
+        right: 125px;
+        transform: scale(0.365);
+    }
+
+    #phone-horizontal-slide1 {
+        top: 5px;
+        right: 416px;
+        transform: scale(0.365) rotate(90deg);
+    }
+
+    #slide2 {
+        grid-template-columns: 30% 40% 30%;
+    }
+
+    .small:not(.screen) {
+        transform: scale(0.237);
+    }
+
+    #phone-central {
+        top: 0;
+        left: -40px;
+        transform: scale(0.39);
+    }
+
+    #phone-small-left {
+        top: 0;
+        left: 39px;
+    }
+
+    #phone-small-right {
+        top: 0;
+        left: -33px;
+    }
+
+    .services {
+        height: auto;
+        border: none;
+    }
+
+    .service-information {
+        height: auto;
+        padding-top: 0;
+        padding-left: 32px;
+    }
+
+    #service-header {
+        width: 314px;
+        height: 36px;
+    }
+
+    #service-content {
+        width: 314px;
+        height: 214px;
+    }
+
+    .layout-3-column {
+        margin-left: 30px;
+        grid-template-columns: none;
+    }
+
+    .portfolio {
+        height: 844px;
+        border: none;
+    }
+
+    .portfolio-header {
+        width: 315px;
+        height: 197px;
+        margin-left: 30px;
+        padding-top: 42px;
+    }
+
+    .portfolio-navigation {
+        margin-left: 30px;
+        padding: 0;
+    }
+
+    .portfolio-name {
+        top: 0;
+        height: 40px;
+    }
+
+    .portfolio-header-text {
+        top: 0;
+        margin: 14px 0 0 0;
+        width: 315px;
+        height: 96px;
+    }
+
+    .layout-4-columns {
+        margin: 0 0 0 22px;
+        width: 334px;
+        height: 580px;
+    }
+
+    .gallery-image {
+        width: 161px;
+        height: 138px;
+        margin: 4px 3px 4px 3px;
+        padding: 5px;
+    }
+
+    .about-us {
+        height: auto;
+        border-bottom: 9px solid #f2f2f2;
+    }
+
+    .about-us-content {
+        top: 0;
+        margin: 0 30px 0 30px;
+        height: 321px;
+    }
+
+        .about-us-content h2 {
+            padding-top: 33px;
+            height: 73px;
+        }
+
+        .about-us-content p {
+            width: 300px;
+            height: 220px;
+            margin-top: 14px;
+            padding-top: 0;
+            line-height: 30px;
+        }
+
+    .layout-3-columns {
+        top: 0;
+        width: 314px;
+        height: auto;
+        margin-left: 30px;
+        flex-wrap: wrap;
+    }
+
+    .about-us-info {
+        width: 314px;
+    }
+
+    .portrait {
+        width: 314px;
+        height: 314px;
+    }
+
+        .portrait img {
+            width: 100%;
+            height: 100%;
+        }
+
+    .about-us-name {
+        height: 15px;
+        margin-top: 21px;
+        padding: 0;
+        line-height: 18px;
+    }
+
+    .about-us-text {
+        width: 314px;
+        height: 47px;
+        padding: 0;
+        margin-top: 5px;
+    }
+
+    .about-us-contact {
+        margin: 9px 0 34px 0;
+        padding: 0;
+    }
+
+    .quote {
+        width: 375px;
+        height: auto;
+        border: none;
+    }
+
+    .quote-container {
+        width: 314px;
+        height: 331px;
+        margin: 0 0 0 30px;
+        padding: 44px 0 0 0;
+    }
+
+        .quote-container h1 {
+            width: 314px;
+        }
+
+        .quote-container p {
+            width: 314px;
+            height: 214px;
+        }
+
+    .quote-main-container {
+        grid-template-columns: none;
+        margin-top: 0;
+    }
+
+    .form {
+        width: 327px;
+        margin-left: 24px;
+        padding: 0;
+    }
+
+    .input-form {
+        width: 315px;
+    }
+
+    #describe {
+        width: 315px;
+    }
+
+    .submit-button {
+        width: 315px;
+        height: 50px;
+    }
+
+    .quote-contact-info {
+        width: 315px;
+        height: auto;
+        margin: 24px 0 0 30px;
+        padding: 0;
+    }
+
+    .contact-info-head {
+        width: 100%;
+        height: 15px;
+        line-height: 18px;
+    }
+
+    .contact-info-text {
+        width: 100%;
+        height: 94px;
+    }
+
+    .quote-contact {
+        margin-top: 5px;
+        margin-bottom: 42px;
+    }
+
     .navigation-active {
         display: flex;
         transition: transform 0.5s ease-out;
     }
-  .menu-active {
-    position: static;
-    display: list-item;
-  }
+
+    .menu-active {
+        position: static;
+        display: list-item;
+    }
 
     .logo-active {
         transform: translateX(-60px);
