--- a/style.css
+++ b/style.css
@@ -889,12 +889,20 @@ body {
         transition: step-start;
     }
 
+    .arrow-left {
+      margin: 34px 0 0 23px;
+    }
+
+    .arrow-right {
+      margin: 38px -14px 0 0;
+    }
+
     .slider {
-        height: 542px;
+        height: 547px;
     }
 
     .slider-list {
-        height: 542px;
+        height: 553px;
     }
 
     .slider-wrapper {
@@ -911,14 +919,14 @@ body {
     }
 
     #phone-vertical-slide1 {
-        top: 55px;
-        right: 53px;
+        top: 50px;
+        right: 58px;
         transform: scale(0.75);
     }
 
     #phone-horizontal-slide1 {
-        top: 55px;
-        right: 168px;
+        top: 51px;
+        right: 164px;
         transform: scale(0.75) rotate(90deg);
     }
 
@@ -946,27 +954,48 @@ body {
     }
 
     .services {
-        height: 675px;
+        height: 674px;
+        border: none;
+    }
+
+    .service-information {
+      height: 169px;
+      padding-top: 16px;
+      padding-right: 54px;
+    }
+
+    #service-content {
+      height: 95px;
+    }
+
+    .layout-3-column {
+      margin-right: 19px;
+    }
+
+    .service-menu {
+      height: 145px;
     }
 
     .portfolio {
-        height: 1094px;
-        border-bottom: 5px solid #323746;
+        height: 1102px;
+        border-bottom: 6px solid #323746;
     }
 
     .portfolio-header {
-        width: 727px;
+        width: 675px;
         height: 180px;
         margin-left: 41px;
     }
 
     .portfolio-header-text {
-        width: 695px;
+      top: 83px;
+        width: 670px;
         height: 60px;
     }
 
     .gallery {
         height: 871px;
+        margin-top: 10px;
     }
 
     .layout-4-columns {
@@ -982,9 +1011,13 @@ body {
 
     .about-us {
         height: 669px;
-        border-bottom: 5px solid #ffffff;
+        border: none;
         background-color: #f2f2f2;
         scroll-margin-top: 90px;
+    }
+
+    .about-us-content {
+      top: 54px;
     }
 
     .about-us-content h {
@@ -993,7 +1026,19 @@ body {
 
     .about-us-content p {
         height: 114px;
-        margin-top: 14px;
+    }
+
+    .layout-3-columns {
+      top: 88px;
+    }
+
+    .about-us-name {
+      height: 35px;
+      padding-top: 10px;
+    }
+
+    .about-us-text {
+      padding-top: 0;
     }
 
     .about-us-info {
@@ -1037,12 +1082,13 @@ body {
 
         .quote-container p {
             padding-top: 14px;
-            width: 707px;
+            width: 670px;
             height: 110px;
         }
 
     .quote-main-container {
         grid-template-columns: 490px 328px;
+        margin: 0;
     }
 
     .input-form {
@@ -1063,11 +1109,17 @@ body {
 
     .contact-info-text {
         width: 221px;
-        height: 150px;
+        height: 143px;
+        padding-top: 0;
+        line-height: 23px;
     }
 
     .quote-contact {
         padding-top: 0;
+    }
+
+    .submit-button {
+      margin-top: 11px;
     }
 }
 
@@ -1088,8 +1140,9 @@ body {
     .header-logo {
         position: relative;
         z-index: 10;
-        margin-left: 0;
+        margin-left: 12px;
         align-self: center;
+        font-size: 2em;
         transition: transform 0.5s ease-in;
     }
 
@@ -1148,7 +1201,7 @@ body {
 
     .slider {
         padding-top: 71px;
-        height: 289px;
+        height: 291px;
     }
 
     .arrow {
@@ -1156,32 +1209,33 @@ body {
     }
 
     .arrow-left {
-        margin-left: 0;
+        margin: 19px 0 0 2px;
     }
 
     .arrow-right {
-        right: 0;
+        right: 16px;
+        bottom: 8px;
     }
 
     .slider-list {
-        height: 218px;
+        height: 220px;
     }
 
     .slider-wrapper {
         width: 100%;
-        height: 218px;
+        height: 220px;
         align-content: center;
     }
 
     #phone-vertical-slide1 {
-        top: 0;
-        right: 125px;
+        top: 1px;
+        right: 147px;
         transform: scale(0.365);
     }
 
     #phone-horizontal-slide1 {
-        top: 5px;
-        right: 416px;
+        top: 1px;
+        right: 422px;
         transform: scale(0.365) rotate(90deg);
     }
 
