--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   box-sizing: content-box;
   max-width: 1020px;
   height: auto;
-  margin: 0;
+  margin: 0 auto;
   font-size: 10px;
   font-family: Lato, Verdana, sans-serif;
 }
